CHANGES IN VERSION 1.27.13
-------------------------

UTILITIES

    o String "." in a VCF file are converted to a blank string (missing value)
      in `seqVCF2GDS()`

    o add a class name 'SeqVarDataList' to the returned 'list(length, data)'
      from `seqGetData()`


CHANGES IN VERSION 1.27.12
-------------------------

UTILITIES

    o add a S3 method `print.SeqVCFHeaderClass()` for `seqVCF_Header()`

    o new option '.tolist' in `seqGetData()`, `seqBlockApply()` and
      `seqUnitApply()`


CHANGES IN VERSION 1.27.8
-------------------------

UTILITIES

    o rewrite `seqGetData()` for faster loading

    o significantly improve `seqBlockApply()` on 'annotation/info/VARIABLE'
      (https://github.com/zhengxwen/SeqArray/issues/59)


CHANGES IN VERSION 1.27.7
-------------------------

NEW FEATURES

    o new functions `seqSetFilterAnnotID()` and `seqGDS2BED()`

    o multicore function in `seqBED2GDS(, parallel=)`

UTILITIES

    o `seqBED2GDS()` allows a single file name without the extended file names
      (.bed, .fam, .bim)

    o allele flip in `seqBED2GDS()` to allow major allele to be reference


CHANGES IN VERSION 1.27.3
-------------------------

NEW FEATURES

    o new function `seqUnitSlidingWindows()`

    o new function `seqUnitApply()`

    o new variable "$variant_index", "$sample_index" in `SeqGetData()`,
      `seqBlockApply()` and `seqUnitApply()` to get the indices of selected
      variants

    o new arguments '.padNA' and '.envir' in `seqGetData()`

UTILITIES

    o `seqAddValue()` adds vectors, matrices and data frame to "annotation/info"


CHANGES IN VERSION 1.26.2
-------------------------

NEW FEATURES

    o multiple variable names are allowed in `seqGetData(, var.name=)`

BUG FIXES

    o fix `seqGetData(, "genotype", .useraw=NA)`
      (https://github.com/zhengxwen/SeqArray/issues/58)


CHANGES IN VERSION 1.26.1
-------------------------

BUG FIXES

    o fails to correctly select duplicate indices in